--- a/style.css
+++ b/style.css
@@ -219,6 +219,10 @@ footer {
 
 }
 
+.tutorial {
+  white-space: pre-line;
+}
+
 .books-grid {
   display: flex;
   justify-content: center;
@@ -264,5 +268,6 @@ footer {
   transform: scale(1.05);
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.25);
 }
+
 
 
