--- a/style.css
+++ b/style.css
@@ -227,6 +227,7 @@ footer {
   display: flex;
   justify-content: center;
   gap: 20px;
+  border-radius: 10px
   flex-wrap: wrap;
   margin-top: 20px;
 }
